# tools/iac-codegen/internal/generator/testdata/golden/thing/model.go
@@ -1,4 +1,4 @@
-// Code generated by coralogix-iac-codegen v0.1.0-beta.16. DO NOT EDIT.
+// Code generated by coralogix-iac-codegen v0.1.0-beta.17. DO NOT EDIT.
 
 package thing
 
@@ -7,11 +7,28 @@ import (
 )
 
 type ThingModel struct {
-	Id        types.String `tfsdk:"id"`
-	Name      types.String `tfsdk:"name"`
-	Enabled   types.Bool   `tfsdk:"enabled"`
-	Count     types.Int64  `tfsdk:"count"`
-	Ordered   types.List   `tfsdk:"ordered"`
-	Unordered types.Set    `tfsdk:"unordered"`
-	Labels    types.Map    `tfsdk:"labels"`
+	Id           types.String      `tfsdk:"id"`
+	Name         types.String      `tfsdk:"name"`
+	Description  types.String      `tfsdk:"description"`
+	Enabled      types.Bool        `tfsdk:"enabled"`
+	Kind         types.String      `tfsdk:"kind"`
+	Config       *ThingConfigModel `tfsdk:"config"`
+	Destinations types.List        `tfsdk:"destinations"`
+	Tags         types.Set         `tfsdk:"tags"`
+	Labels       types.Map         `tfsdk:"labels"`
+	CreateTime   types.String      `tfsdk:"create_time"`
+	UpdateTime   types.String      `tfsdk:"update_time"`
+}
+
+type HttpThingConfigModel struct {
+	Endpoint types.String `tfsdk:"endpoint"`
+}
+
+type QueueThingConfigModel struct {
+	Topic types.String `tfsdk:"topic"`
+}
+
+type ThingConfigModel struct {
+	Http  *HttpThingConfigModel  `tfsdk:"http"`
+	Queue *QueueThingConfigModel `tfsdk:"queue"`
 }
